k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: container-service
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: container-service
  template:
    metadata:
      labels:
        app: container-service
    spec:
      containers:
        - name: container-service
          image: __ACR__.azurecr.io/container-service:__TAG__
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8080 }
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8080 }
            initialDelaySeconds: 20
            periodSeconds: 20
