k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: container-service
  namespace: maersk
spec:
  selector:
    app: container-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
